--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,17 @@
             <artifactId>jedis</artifactId>
             <version>5.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
